Wed Mar  7 19:07:58 UTC 2007  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * ace/Message_Block.cpp:

          Fixing a problem caused by inadvertently overwriting an external
          buffer passed in the constructor. It happens when
          ACE_INITIALIZE_MEMORY_BEFORE_USE is set (as result of setting
          ACE_HAS_VALGRIND). Thanks to Johnny Willemsen for reporting it.

Wed Mar  7 18:44:10 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/wrapper_macros.GNU:

          Fixed an issue where if ssl wasn't set to zero, it was assumed to
          be set to non-zero (ignoring the case where it could be set to
          empty).

Wed Mar  7 17:32:51 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Time_Value.cpp (operator*=):

          Altered implementation to avoid converting the microseconds
          component of the ACE_Time_Value to a fraction of a second.  In
          the case were the floating point type's mantissa width is the
          same as the width of the time_t (seconds) value, a maxed out
          ACE_Time_Value seconds component would utilize all bits in the
          mantissa, leaving no room for a fraction.  The microseconds
          component would end up not contributing to the multiplication.
          Multiply the seconds and microseconds components separately
          instead.  This also saves us a floating point division, which
          can be expensive.

Wed Mar  7 16:35:04 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/ace_openssl.mpb:
        * include/makeinclude/wrapper_macros.GNU:

          Removed the addition of $(SSL_ROOT)/include and $(SSL_ROOT)/lib
          from the includes and libpaths project variables and ssl and
          crypto from the lit_libs settings for gnuace (as was done for
          automake).

          This functionality will now come from wrapper_macros.GNU in the